# git-dash

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SPEC.md  deny.toml  justfile
.beads/: issues.jsonl
.github/workflows/: ci.yml  update-homebrew-tap.yml
docs/: CLI.md  SPEC.md
scripts/: build-release.sh
src/: app.rs  discovery.rs  git.rs  logger.rs  main.rs  status.rs  ui.rs  worker.rs
tests/: repo_discovery.rs
